[package]
name = "nexusd"
version = "0.10.0"
edition = "2021"
description = "Nexus VFS daemon — pure-Rust binary serving VFS gRPC + Raft federation"
publish = false

[[bin]]
name = "nexusd"
path = "src/main.rs"

[dependencies]
nexus-core = { workspace = true, default-features = false, features = [
    "driver-path-local",
    "service-audit",
    "service-permission",
] }
nexus-cluster = { workspace = true, default-features = false, features = ["grpc"] }

tonic = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gethostname = "1.1"
