[package]
name = "raft"
version = "0.1.0"
edition = "2021"
description = "Raft consensus and embedded storage for Nexus"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(has_protos)"] }

[lib]
name = "nexus_raft"
crate-type = ["rlib"]

[[bin]]
name = "nexus-witness"
path = "src/bin/witness.rs"
required-features = ["grpc"]

[[bin]]
name = "nexus-federation-server"
path = "src/bin/federation_server.rs"
required-features = ["grpc"]

[dependencies]
# Merged nexus-core: contracts (ROOT_ZONE_ID), kernel (MetaStore trait,
# DistributedCoordinator), util (transport_primitives).
nexus-core = { workspace = true }

redb = "4"
tempfile = "3"

# Raft consensus (tikv/raft-rs)
raft = { version = "0.7", default-features = false, features = ["protobuf-codec"], optional = true }
protobuf = { version = "2.28", optional = true }
slog = { version = "2.8", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "signal"], optional = true }

tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

bytes = { version = "1", optional = true }
dashmap = { version = "6", optional = true }
time = { version = "0.3", features = ["parsing"], optional = true }
sha2 = { version = "0.11", optional = true }
rcgen = { version = "0.14", features = ["pem", "x509-parser"], optional = true }
pem = { version = "3", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.10", optional = true }
gethostname = { version = "1.1", optional = true }

pyo3 = { version = "0.28.3", optional = true }
mimalloc = { workspace = true, optional = true }

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = "3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["full"]
mimalloc = ["dep:mimalloc"]

async = ["tokio"]

# PyO3 surface — opt-in only. Trim fork has no cdylib so this is unused
# in practice; preserved for parity with upstream feature shape.
python = ["pyo3"]

consensus = ["raft", "protobuf", "slog", "async"]

grpc = ["tonic", "prost", "tonic-prost", "bytes", "dep:tonic-prost-build", "async", "tracing-subscriber", "consensus", "dashmap", "time", "sha2", "rcgen", "pem", "base64", "gethostname", "rand"]

full = ["grpc", "consensus"]
