[package]
name = "services"
version = "0.1.0"
edition = "2021"
description = "Post-syscall services tier — audit / agents / acp / tasks. Fired on syscall paths through registered hooks; depends on `kernel` only. Reaches backends and raft through `kernel.sys_*` syscalls (the same path Python takes), never via direct cross-crate imports. The orthogonality invariant is `services ⊥ backends ⊥ transport ⊥ raft`."

[lib]
name = "services"
crate-type = ["rlib"]

[features]
default = []

# Per-service features.  Each gates one `pub mod` line in lib.rs so
# slim Rust binaries (nexus-cluster) link only the services they want.
service-audit = []
service-agents = []
service-managed-agent = []
service-acp = []
service-tasks = []
# AuditNode — consumer-side audit collect/gather service for an
# audit-only federation node. Pulls `service-audit` to reuse
# `audit::prepare_stream_only` for local DT_STREAM registration on
# joined learner zones (the audit-node consumes traces, it does not
# install the producing AuditHook).
service-audit-node = ["service-audit"]
# Matrix Client-Server v3 adapter — exposes nexus chat-with-me
# DT_STREAMs as Matrix rooms so stock chat clients (Element /
# FluffyChat / Cinny) can join conversations without a bespoke
# nexus client. End-state spec: sudowork-2/docs/tech/nexus-integration-architecture.md §4.2.
service-matrix-adapter = ["dep:axum", "dep:base32", "dep:tower"]
# PasswordVaultService — gRPC interface to the password vault
# (namespace="passwords"). Phase 1 Rust impl per #3923 integration doc.
# Hosted by the `vault` profile (rust/profiles/vault/), not bundled into
# the cluster binary. aes-gcm for the Fernet-equivalent envelope on
# encrypted blob columns (server-side master key).
service-password-vault = ["dep:aes-gcm", "dep:prost", "dep:prost-types", "dep:tonic-prost", "dep:hmac", "dep:sha1", "dep:base32"]

[dependencies]
contracts = { workspace = true }
# services depends on kernel (one-way; kernel never depends on services
# — the in-tree Rust API surface is `Kernel::register_native_hook` /
# `Kernel::prepare_audit_stream` / `kernel::core::dispatch::*`).
# `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connector HTTP stack) off so this rlib stays
# slim; final binaries pull them via their own kernel dep with whatever
# feature set they need.
kernel = { workspace = true }
# **HARD INVARIANT** — services ⊥ backends ⊥ raft. Services that need
# backend or raft-replicated behaviour reach it through `kernel.sys_*`
# syscalls (the same path Python takes), never via direct cross-crate
# imports. See `services/src/lib.rs` for the rationale.
# tonic — used by `password_vault::PasswordVaultService` (and any
# future Rust gRPC service in this crate) for `Request` / `Response` /
# `Status` types. Unconditional because each service module is
# feature-gated, but tonic itself is shared infrastructure for them.
tonic = { workspace = true }
redb = "4"
# Tasks engine storage backend.
fjall = "3"
# `acp::subprocess` calls libc::dup() to hand kernel-side OwnedFds
# alongside the ones tokio::process::Child still owns; #[cfg(unix)]
# only.
libc = "0.2"
bincode = "1.3"
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tracing = "0.1"
# Used by `managed_agent::session` for session_id allocation; mirrors
# the `kernel/Cargo.toml` choice (v4 only — no system-time dep needed).
uuid = { version = "1", features = ["v4"] }
# tokio drives the AcpSubprocess + ACP JSON-RPC connection (Unix-only
# via #[cfg(unix)]).  `process` for tokio::process::Command, `io-util`
# for AsyncRead/Write helpers, `time` for `tokio::time::sleep`, `sync`
# for the oneshot reply channels, `rt-multi-thread` for spawn_blocking
# inside the gRPC handler that calls into AcpService.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "io-util", "time", "sync", "macros"] }
# AsyncRead/Write extension traits + BoxFuture used by acp::connection.
futures = "0.3"
# Matrix C-S adapter HTTP surface. Lazily pulled in by the
# `service-matrix-adapter` feature so non-adapter builds (cluster
# binary, raft-witness, slim WASM) do not pay the axum compile time.
axum = { version = "0.8", default-features = false, features = ["json", "http1", "tokio", "matched-path", "query"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
# base32 alphabet for Matrix room-id encoding (`!{base32(stream_path)}:nexus.local`)
# and password_vault's TOTP seed decoding (RFC 4648 base32).
base32 = { version = "0.5", optional = true }
# HMAC-SHA1 for RFC 6238 TOTP (`service-password-vault`). Same primitive
# pyotp uses on the Python side; produces identical codes for the same
# (seed, window).
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
# `async_trait` lets the `AuthBackend` trait expose async methods —
# axum handlers are async, and the production AuthService backend will
# do an async lookup. Used by every adapter feature gate, so we pull
# it unconditionally rather than wrapping each impl in a
# cfg(feature) hop.
async-trait = "0.1"
# Crypto primitives for `service-password-vault`. AES-256-GCM matches the
# integration doc's "Fernet-equivalent" envelope spec and is what the
# Rust SecretsService port (when it lands) will share. Optional so slim
# builds without the vault service don't pay the dep cost.
aes-gcm = { version = "0.10", optional = true }
# Re-exported by tonic for proto-generated types; needed explicitly when
# `tonic::include_proto!` macro expansion references `prost::Message`.
# Optional to keep slim builds (no proto-using services) lean.
prost = { workspace = true, optional = true }
# Runtime codec for tonic-generated services — generated code references
# `tonic_prost::ProstCodec` directly. Pinned to the same 0.14 family as
# the tonic / tonic-prost-build deps to avoid ABI skew.
tonic-prost = { version = "0.14", optional = true }
# Well-known proto types (Timestamp etc.) used by PutEntryResponse and
# ListVersions.Version messages in password_vault.proto.
prost-types = { version = "0.14", optional = true }

[build-dependencies]
# Proto codegen for service-password-vault. Mirrors raft + kernel build
# scripts. Vendored protoc binary keeps builds reproducible.
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"
# Test the adapter's HTTP surface end-to-end against an in-memory
# axum router via `tower::Service::call`.
tower = { version = "0.5", features = ["util"] }
