[package]
name = "transport"
version = "0.1.0"
edition = "2021"
description = "Network surface tier — VFS gRPC server + federation/peer-blob clients"

[lib]
name = "transport"
crate-type = ["rlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
# Merged nexus-core: contracts + util (transport_primitives) + kernel
# (Kernel, KernelError, OperationContext, vfs_proto stubs) + services
# (AuthProvider trait).
nexus-core = { workspace = true, default-features = false, features = ["transport-primitives"] }
# raft for federation client's wire-format proto stubs (JoinZoneRequest etc.).
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
parking_lot = "0.12"
dashmap = "6.1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
pyo3 = { version = "0.28.3", features = ["hashbrown"], optional = true }

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
