[package]
name = "transport"
version = "0.1.0"
edition = "2021"
description = "Network surface tier — VFS gRPC server (port 2028) + IPC envelope helpers (in-bound) plus VFS / peer-blob / federation clients (driver-outgoing). Depends on `kernel`, `lib` (transport_primitives module), and `raft` (proto stubs for the federation client)."

[lib]
name = "transport"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
contracts = { workspace = true }
# Transport depends on kernel for the in-tree Rust API surface
# (`Kernel`, `KernelError`, `OperationContext`, `vfs_proto` generated
# stubs). `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connectors HTTP) off in this rlib; final binaries
# pull them via their own kernel dep with whatever feature set they need.
kernel = { workspace = true }
backends = { workspace = true, default-features = false, features = ["driver-path-local", "driver-remote"] }
# `lib::transport_primitives` (TLS / pool / addressing / TOFU /
# PeerBlobClient trait) lives behind lib's `transport` feature.
lib = { workspace = true, features = ["transport"] }
# raft for the federation client's wire-format proto stubs
# (JoinZoneRequest etc.). Transport is the network surface so it
# names raft's wire types directly, like a Postgres client crate
# referencing libpq.
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
parking_lot = "0.12"
dashmap = "6.1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
