[package]
name = "transport"
version = "0.1.0"
edition = "2021"
description = "Network surface tier — VFS gRPC server (port 2028) + IPC envelope helpers (in-bound) plus VFS / peer-blob / federation clients (driver-outgoing). Depends on `kernel`, `lib` (transport_primitives module), and `raft` (proto stubs for the federation client)."

[lib]
name = "transport"
crate-type = ["rlib"]

[features]
default = []

[dependencies]
contracts = { workspace = true }
# Transport depends on kernel for the in-tree Rust API surface
# (`Kernel`, `KernelError`, `OperationContext`, `vfs_proto` generated
# stubs). `default-features = false` keeps the kernel runtime defaults
# (mimalloc allocator, connectors HTTP) off in this rlib; final binaries
# pull them via their own kernel dep with whatever feature set they need.
kernel = { workspace = true }
backends = { workspace = true, default-features = false, features = ["driver-path-local", "driver-remote"] }
# `lib::transport_primitives` (TLS / pool / addressing / TOFU /
# PeerBlobClient trait) lives behind lib's `transport` feature.
lib = { workspace = true, features = ["transport"] }
# raft for the federation client's wire-format proto stubs
# (JoinZoneRequest etc.). Transport is the network surface so it
# names raft's wire types directly, like a Postgres client crate
# referencing libpq.
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
parking_lot = "0.12"
dashmap = "6.1"
thiserror = "2"
tracing = "0.1"
sha2 = "0.11"
# Recover the mTLS peer's identity from the client cert tonic already
# verified (`peer_identity`). Parsing only — cert *minting* stays in
# `raft::transport::certgen`.
x509-parser = "0.18"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
base64 = "0.22"
# Manual gRPC framing for plugin-proxy routing (Routes wiring of plugin
# cdylibs into the cluster's tonic server — bytes-in / bytes-out path
# that bypasses tonic's typed codec).
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", default-features = false }

[dev-dependencies]
tempfile = "3"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
# peer_identity tests re-parse a certgen-minted PEM back to DER.
pem = "3"
# E2E: real tonic client round-trips a request through PluginProxyService.
# tonic-prost provides ProstCodec for the raw unary path; prost emits the
# Message derive for the inline EchoMsg type the test exchanges.
tonic-prost = { version = "0.14" }
tokio-stream = { version = "0.1", features = ["net"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
