[package]
name = "nexus-cluster"
version = "0.1.0"
edition = "2021"
description = "Nexus cluster-profile daemon — pure-Rust VFS + Raft + federation binary"
publish = false

[[bin]]
name = "nexusd-cluster"
path = "src/main.rs"

[dependencies]
# Merged nexus-core covers what used to be contracts + kernel + backends + services.
nexus-core = { workspace = true, default-features = false, features = [
    "driver-path-local",
    "service-audit",
    "service-permission",
] }
raft = { workspace = true, default-features = false, features = ["grpc"] }
transport = { workspace = true }

tonic = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gethostname = "1.1"
