[package]
name = "nexus-full"
version = "0.1.1"
edition = "2021"
description = "Nexus full-profile runtime — cluster (Raft + IPC + federation) plus the S3/R2 object-store driver"
authors = ["Nexus Team"]
publish = false

[[bin]]
name = "nexusd-full"
# Reuses the cluster binary's entrypoint verbatim. `cluster/src/main.rs` is
# feature-agnostic — Cargo features select which ObjectStore arms compile into
# `DefaultObjectStoreProvider`; the `main` itself has no per-driver code. This
# profile differs from `nexusd-cluster` ONLY by enabling `backends/driver-s3`,
# so it shares the exact same source instead of duplicating ~780 lines. Keeping
# the federation binary pure (and small, under its size gate) while S3/R2
# serving lives in this separate profile was the kernel-team ask on nexus-vfs#27.
path = "../cluster/src/main.rs"

[features]
default = []
# Declared but OFF. `full` shares cluster/src/main.rs, and that source carries
# `#[cfg(feature = "auth-api-key")]` arms — every profile built from it has to
# know the feature name or the cfg is "unexpected". `nexusd-full` is
# cluster + the S3 driver; terminating external credentials is
# `nexusd-collaboration`'s job.
auth-api-key = ["dep:auth", "dep:rand"]

[dependencies]
# Mirror of `profiles/cluster` deps, with one delta: `backends` adds
# `driver-s3`. Keep these in sync with `profiles/cluster/Cargo.toml`.
raft = { workspace = true, default-features = false, features = ["grpc"] }
contracts = { workspace = true }
kernel = { workspace = true }
backends = { workspace = true, default-features = false, features = ["driver-path-local", "driver-remote", "driver-s3"] }
transport = { workspace = true }
auth = { workspace = true, optional = true }
rand = { version = "0.10", optional = true }

tonic = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
gethostname = "1.1"

[dev-dependencies]
# The shared cluster main.rs test module opens real redb files in a temp dir.
tempfile = "3"
