[package]
name = "nexus-full"
version = "0.1.1"
edition = "2021"
description = "Nexus full-profile runtime — cluster (Raft + IPC + federation) plus the S3/R2 object-store driver"
authors = ["Nexus Team"]
publish = false

[[bin]]
name = "nexusd-full"
path = "src/main.rs"

[dependencies]
# Consume the cluster library entry (`nexus_cluster::run`) as a normal
# dependency. All the raft / kernel / transport / auth / tonic / tokio /
# clap / tracing deps flow through transitively — this crate does NOT
# re-declare them. The only local delta from cluster is the next line:
# opt `backends` into the S3 driver via Cargo feature unification.
#
# Feature unification: cluster's Cargo.toml declares
#   backends = { workspace = true, default-features = false,
#                features = ["driver-path-local", "driver-remote"] }
# This crate declares
#   backends = { workspace = true, default-features = false,
#                features = ["driver-s3"] }
# Cargo activates the UNION for the shared `backends` compilation, so the
# `nexusd-full` binary gets all three drivers compiled in. `nexusd-cluster`
# builds in a separate rustc invocation and only sees its own two.
nexus-cluster = { path = "../cluster" }
backends = { workspace = true, default-features = false, features = ["driver-s3"] }
anyhow = "1"

[dev-dependencies]
# The shared cluster main test module opens real redb files in a temp dir.
tempfile = "3"
