[package]
name = "nexus-vault"
version = "0.1.0"
edition = "2021"
description = "Nexus vault-profile runtime — `nexusd-vault`, gRPC PasswordVaultService for password-agent + sudowork-2 clients. Runs alongside (not bundled into) `nexusd-cluster`."
authors = ["Nexus Team"]
publish = false

[[bin]]
name = "nexusd-vault"
path = "src/main.rs"

[dependencies]
# Our PasswordVaultService impl. Enabling the feature pulls in
# aes-gcm / hmac / sha1 / base32 / prost-types / tonic-prost (all
# gated under service-password-vault in services/Cargo.toml).
services = { workspace = true, features = ["service-password-vault"] }
# tonic for the gRPC server. Same version family as services / cluster
# / raft (workspace-pinned).
tonic = { workspace = true }

clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
